# devOps_last_ex

./: Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements_poetry.txt
.github/workflows/: .env  .env_example  my-action.yml
clickhouse/data/: status  uuid
clickhouse/data/data/system/: asynchronous_metric_log  metric_log  query_log  query_thread_log  session_log  trace_log
clickhouse/data/metadata/: default  default.sql  system  system.sql
clickhouse/data/preprocessed_configs/: users.xml
data/db/base/1/: 112  113
data/db/base/13776/: 2619
data/db/base/16384/: 1247  1249  1259  1259_vm  16385  16386  16390  16391  16393  16394  16397  16399  16401  16402  16405  16407  16415  16419  16421  16428  16429  16430  16443  (+77 more)
data/db/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
data/db/pg_stat/: db_0.stat  db_16384.stat  global.stat
data/db/pg_xact/: 0000
nginx/: nginx.conf
src/api/: admin.py  api.py  models.py  serializers.py  services.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_alter_notes_slug.py  0003_remove_folder_notes_notes_folders_alter_folder_name.py
src/shop/: celery.py  settings.py  urls.py
src/store/: admin.py  models.py  queries.py  services.py  urls.py  views.py
src/store/migrations/: 0001_initial.py  0002_rename_mode_of_shipment_orderinfo_mode_of_shipment.py
src/users/: enums.py  forms.py  gitlab.py  models.py  services.py  urls.py
src/users/migrations/: 0001_initial.py  0002_remove_user_avatar.py
src/users/views/: auth.py  main.py
(+1059 files in other folders)
